Use an intrusive linked list for BasicBlock instructions
 * Encapsulates all Instruction.setBlock() and IRMetadata.record()
   calls within InstructionList so they cannot be missed.
 * Updates passes that added the same instruction (temporarily) to two
   different blocks (or to the same block twice).
   * Instructions can now belong to only one list, so must be removed
     before added again.
 * Switches a handful of iterator uses to for loops (get a feel for
   the style)
   * I think many spots would benefit from using this style over
     iterators, as it means you do not need worry about invalidating
     iterators, or rewinding them.
 * Changes semantics of Block.listIterator(Instruction) to match
   Block.listIterator(index)
   * E.g. The given instruction will be the first to be returned by
     a call to next().
 * Moves some instruction mutating helper logic from
   BasicBlockInstructionListIterator to InstructionList & Instruction,
   so that they can be used without an iterator.
   * Likely makes sense to do more of this going forward, or to capture
     these helpers in an InstructionUtil class.
 * Leaves in some TODOs for trivial follow-up refactors in order to
   not make this even larger of a change than it is.

Bug: b/376663044
Change-Id: I11005b74efbbda9fe2b463a5f848c0f486868d59